<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_menu_news_disable"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_check_in"
        android:icon="@drawable/ic_menu_check_in_disable"
        android:title="@string/title_check_in" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/ic_menu_inbox_disable"
        android:title="@string/title_inbox" />

    <item
        android:id="@+id/navigation_portfolio"
        android:icon="@drawable/ic_menu_portfolio_disable"
        android:title="@string/title_portfolio" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_menu_more_disable"
        android:title="@string/title_more" />

</menu>