<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news">

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.viht.assignment.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_check_in"
        android:name="com.viht.assignment.ui.checkin.CheckInFragment"
        android:label="@string/title_check_in"
        tools:layout="@layout/fragment_check_in" />

    <fragment
        android:id="@+id/navigation_inbox"
        android:name="com.viht.assignment.ui.inbox.InboxFragment"
        android:label="@string/title_inbox"
        tools:layout="@layout/fragment_inbox" />

    <fragment
        android:id="@+id/navigation_portfolio"
        android:name="com.viht.assignment.ui.portfolio.PortfolioFragment"
        android:label="@string/title_portfolio"
        tools:layout="@layout/fragment_portfolio" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.viht.assignment.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
</navigation>